Updates from Overleaf

--- a/cv_for_NHFP.tex
+++ b/cv_for_NHFP.tex
@@ -1,5 +1,5 @@
 % LaTeX resume using res.cls
-\documentclass[margin,10pt]{res}
+\documentclass[margin,12pt]{res}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 
@@ -73,7 +73,7 @@ Box 351580 \\
 Seattle, WA 98195-1580 \\
 
 \section{Education} 
-Ph.D. Candidate in Astronomy \& Astrobiology (dual-title PhD program) \hfill (2014 -- Present) \\
+Ph.D. Candidate in Astronomy \& Astrobiology  \hfill (2014 -- Present) \\
 University of Washington, Seattle, WA  \\
 \textit{Advisor:} Victoria Meadows 
 
@@ -93,37 +93,42 @@ University of California, Santa Cruz, CA \\
                     \end{itemize}
 
 \section{Research \\Experience} 
-                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill (Sept 2014 -- Present)\\
-                Terrestrial exoplanets, their atmospheres, habitability \& biosignatures
+                {\sl Graduate Research Assistant}:   \hfill (Sept 2014 -- Present)\\
+                Virtual Planetary Laboratory
                     \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Studied terrestrial exoplanets, their atmospheres, habitability \& biosignatures
                         \item Developed, tested, and applied a physically rigorous terrestrial exoplanet retrieval model  
                         \item Simulated and analyzed radiative transfer, photochemical, climate, telescope, surface mapping, and machine learning models
                     \end{itemize}  
 
-                {\sl Undergraduate \& Postbaccalaureate Researcher}: University of California, Santa Cruz \hfill          (2012 -- 2014)\\
-                Hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval 
+                {\sl Undergraduate \& Post-baccalaureate Researcher}: \hfill          (2012 -- 2014)\\
+                University of California, Santa Cruz
                     \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Studied hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval 
                         \item Retrieved exoplanet atmospheric compositions using emission spectra 
-                        \item Applied Bayesian methods for parameter estimation 
-                        \item Calculated and published weighted mean opacities for substellar and planetary atmospheres\\
+                        \item Applied Bayesian methods for parameter estimation \\
                     \end{itemize} 
    
 \section{Teaching \\Experience} 
-                {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill (Sept 2016 -- Present)\\
-                Advising undergraduate students in exoplanet astronomy and astrobiology research\\
-                \\
-                %    \begin{itemize}  \itemsep -1pt %reduce space between items
-                %        \item Guadalupe Tovar (UW Undergraduate)
-                %    \end{itemize}
-                {\sl Teaching Assistant}: Department of Astronomy, University of Washington   \hfill          (Sept 2014 -- June 2015)\\
-                Led two biweekly sections for undergraduate students
+                {\sl Research Mentor}: \hfill (Sept 2016 -- Present)\\
+                Department of Astronomy, University of Washington 
+                \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Advised undergraduate students in exoplanet astronomy and astrobiology research\\
+                    \end{itemize}
+                
+                {\sl Teaching Assistant}:   \hfill          (Sept 2014 -- June 2015)\\
+                Department of Astronomy, University of Washington 
                     \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Led two biweekly sections for undergraduate students
                         \item ASTR 101 (Spring 2015; Autumn 2014)
                         \item ASTR 150 (Winter 2015)
                     \end{itemize}  
                 
-                {\sl Math \& Writing Tutor}: Learning Support Services, UCSC   \hfill          (Sept 2010 -- June 2012)\\
-                Instructed students in college level mathematics and writing as a group and drop-in tutor\\
+                {\sl Math \& Writing Tutor}:   \hfill          (Sept 2010 -- June 2012)\\
+                Learning Support Services, UC Santa Cruz
+                \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Instructed students in college level mathematics and writing as a group and drop-in tutor\\
+                    \end{itemize}  
                  
                                   
 \section{Honors \\ \& Awards}
@@ -144,15 +149,15 @@ University of California, Santa Cruz, CA \\
                     \item Extensive experience with MS Office Suite \\
                 \end{itemize}
 
-\section{Publications} 
-                {\sl First Authored}
+\section{List of \\Publications} 
+                {\sl ~~~\underline{First Authored}}
                 \begin{benumerate}{4}
-                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019, $^{\star}$\textit{submitted}). \href{}{``Mirages of a cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}. 
+                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019, $^{\star}$\textit{in review}). \href{}{``Mirages of a cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
-                {\sl Co-Authored}
+                {\sl ~~\underline{Co-Authored}}
                 \begin{benumerate}{15}
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. %\textit{The Astrophysical Journal}.
@@ -176,16 +181,16 @@ University of California, Santa Cruz, CA \\
                 %\end{benumerate}
                  
                  
-\section{Presentations} 
-                {\sl Invited Talks}
+\section{List of \\Presentations} 
+                {\sl ~~~\underline{Invited Talks}}
                 \begin{benumerate}{4}
                     \item $^{\star}$\textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019, $^{\star}$\textit{upcoming}). 
                     \href{}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, AGU-AAS joint exoplanet session, San Francisco, CA, 10 Dec. 
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
+                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019, $^{\star}$\textit{upcoming}). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
-                {\sl Contributed Talks}
+                {\sl ~~~\underline{Contributed Talks}}
                 \begin{benumerate}{7}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://docs.google.com/viewer?url=https://agu.confex.com/agu/abscicon19/mediafile/ExtendedAbstract/Paper481632/JLY_AbSciCon2019_Abstract3.pdf}{``TRAPPIST-1 and Beyond: Strategies for Characterizing Terrestrial Exoplanets and their Habitability''}. Abstract [202-7] presented at 2019 Astrobiology Science Conference, Bellevue, WA, 24-28 June. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). ``Detecting and Characterizing Terrestrial Atmospheres in the TRAPPIST-1 System with JWST''. TRAPPIST-1 Conference, Li\`ege, Belgium, 11-14 Jun. 
@@ -195,7 +200,7 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
                     \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03
                 \end{benumerate}
-                {\sl Posters}
+                {\sl ~~~\underline{Posters}}
                 \begin{benumerate}{8}  
                     \item \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4098.pdf}{``Extending Atmospheric Characterization to Earth-Sized Exoplanets with JWST: Transits, Eclipses, and the TRAPPIST-1 System''}. Habitable Worlds 2017, Laramie, WY \#4098
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Schwieterman, E. W., Fujii, Y., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4110.pdf}{``Detecting Oceans on Exoplanets Using Phase-Dependent Mapping with Next-Generation Coronagraph-Equipped Telescopes''}. Habitable Worlds 2017, Laramie, WY \#4110
