--- a/cv.tex
+++ b/cv.tex
@@ -147,7 +147,7 @@ University of California, Santa Cruz, CA \\
 \section{Publications} 
                 {\sl First Authored}
                 \begin{benumerate}{4}
-                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019, $^{\star}$\textit{submitted}). \href{}{``Mirages of a cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}. 
+                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019, $^{\star}$\textit{in press}). \href{https://ui.adsabs.harvard.edu/abs/2019arXiv191109132L/abstract}{``A Mirage of the cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}. \textit{arxiv preprint arXiv:1911.09132}. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
@@ -157,7 +157,7 @@ University of California, Santa Cruz, CA \\
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. %\textit{The Astrophysical Journal}.
                     \item $^{\star}$Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2019, $^{\star}$\textit{in prep}). \href{}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. %\textit{The Astrophysical Journal}.
-                    \item $^{\star}$Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2019, $^{\star}$\textit{submitted}). \href{}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}.
+                    \item $^{\star}$Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2019, $^{\star}$\textit{in review}). \href{}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}.
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
@@ -176,7 +176,7 @@ University of California, Santa Cruz, CA \\
                 %\end{benumerate}
                  
                  
-\section{Presentations} 
+\section{Conference \\Presentations} 
                 {\sl Invited Talks}
                 \begin{benumerate}{4}
                     \item $^{\star}$\textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019, $^{\star}$\textit{upcoming}). 
