Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@ University of California, Santa Cruz, CA \\
                     \begin{itemize}  \itemsep -1pt %reduce space between items
                         \item Developed, tested, and applied a physically rigorous terrestrial exoplanet retrieval model  
                         \item Simulated and analyzed radiative transfer, photochemical, climate, telescope, surface mapping, and machine learning models
-                    \end{itemize}  
+                    \end{itemize} 
 
                 {\sl Undergraduate \& Postbaccalaureate Researcher}: University of California, Santa Cruz \hfill          (2012 -- 2014)\\
                 Hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval 
@@ -147,7 +147,7 @@ University of California, Santa Cruz, CA \\
 \section{Publications} 
                 {\sl First Authored}
                 \begin{benumerate}{4}
-                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019, $^{\star}$\textit{in press}). \href{https://ui.adsabs.harvard.edu/abs/2019arXiv191109132L/abstract}{``A Mirage of the cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}. \textit{arxiv preprint arXiv:1911.09132}. 
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the cosmic shoreline: Venus-like clouds as a statistical false positive for exoplanet atmospheric erosion''}. \textit{The Astrophysical Journal Letters}, 887, L11. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
@@ -155,7 +155,7 @@ University of California, Santa Cruz, CA \\
                 {\sl Co-Authored}
                 \begin{benumerate}{15}
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
-                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. %\textit{The Astrophysical Journal}.
+                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{submitted}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. %\textit{The Astrophysical Journal}.
                     \item $^{\star}$Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2019, $^{\star}$\textit{in prep}). \href{}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. %\textit{The Astrophysical Journal}.
                     \item $^{\star}$Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2019, $^{\star}$\textit{in review}). \href{}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}.
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
@@ -180,7 +180,7 @@ University of California, Santa Cruz, CA \\
                 {\sl Invited Talks}
                 \begin{benumerate}{4}
                     \item $^{\star}$\textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019, $^{\star}$\textit{upcoming}). 
-                    \href{}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, AGU-AAS joint exoplanet session, San Francisco, CA, 10 Dec. 
+                    \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
