Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -179,7 +179,7 @@ University of California, Santa Cruz, CA \\
 \section{Conference \\Presentations} 
                 {\sl Invited Talks}
                 \begin{benumerate}{4}
-                    \item $^{\star}$\textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019, $^{\star}$\textit{upcoming}). 
+                    \item \textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019). 
                     \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
