Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -186,7 +186,8 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
                 {\sl Contributed Talks}
-                \begin{benumerate}{7}
+                \begin{benumerate}{8}
+                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2020, $^{\star}$\textit{upcoming}). \href{https://www.abstractsonline.com/pp8/#!/8993/presentation/2216}{``The Detection and Characterization of Terrestrial Exoplanet Atmospheres and the Search for Habitability and Biosignatures''}. American Astronomical Society Meeting Abstracts, 235, \#230.05
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://docs.google.com/viewer?url=https://agu.confex.com/agu/abscicon19/mediafile/ExtendedAbstract/Paper481632/JLY_AbSciCon2019_Abstract3.pdf}{``TRAPPIST-1 and Beyond: Strategies for Characterizing Terrestrial Exoplanets and their Habitability''}. Abstract [202-7] presented at 2019 Astrobiology Science Conference, Bellevue, WA, 24-28 June. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). ``Detecting and Characterizing Terrestrial Atmospheres in the TRAPPIST-1 System with JWST''. TRAPPIST-1 Conference, Li\`ege, Belgium, 11-14 Jun. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{http://adsabs.harvard.edu/abs/2019AAS...23310303L}{``Simulating the Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. American Astronomical Society Meeting Abstracts, 233, \#103.03
